fix - increase font-size of planet facts and taps on mobile devices

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -45,12 +45,12 @@
     --fs-heading: var(--fs-700);
     --fs-nav: var(--fs-500);
 
-    --fs-tap: var(--fs-200);
+    --fs-tap: var(--fs-400);
     --fs-planet: var(--fs-800);
 
     --fs-text: var(--fs-300);
 
-    --fs-facts: var(--fs-100);
+    --fs-facts: var(--fs-300);
     --fs-data: var(--fs-600);
 
     --fs-wiki: var(--fs-400);
